--- a/app/views/admin/dashboards/dashboard.html.erb
+++ b/app/views/admin/dashboards/dashboard.html.erb
@@ -25,7 +25,7 @@
           </div>
         </div>
     </div>
-    <!-- Users Card Example -->
+    <!-- Users Card -->
     <div class="col-xl-3 col-md-6 mb-4">
         <div class="card border-left-primary shadow h-100 py-2">
           <div class="card-body">
@@ -43,7 +43,7 @@
           </div>
         </div>
     </div>
-    <!-- Articles Card Example -->
+    <!-- Articles Card -->
     <div class="col-xl-3 col-md-6 mb-4">
         <div class="card border-left-success shadow h-100 py-2">
           <div class="card-body">
@@ -61,33 +61,82 @@
           </div>
         </div>
     </div>
-    <!-- Uptime Card Example -->
+
+    <!-- Leagues Card -->
     <div class="col-xl-3 col-md-6 mb-4">
-        <div class="card border-left-info shadow h-100 py-2">
+        <div class="card border-left-danger shadow h-100 py-2">
           <div class="card-body">
               <div class="row no-gutters align-items-center">
                 <div class="col mr-2">
-                    <div class="text-xs font-weight-bold text-info text-uppercase mb-1">Uptime
+                    <div class="text-xs font-weight-bold text-danger text-uppercase mb-1">
+                      Leagues
                     </div>
-                    <div class="row no-gutters align-items-center">
-                      <div class="col-auto">
-                          <div class="h5 mb-0 mr-3 font-weight-bold text-gray-800">100%</div>
-                      </div>
-                      <div class="col">
-                          <div class="progress progress-sm mr-2">
-                            <div class="progress-bar bg-info" role="progressbar"
-                                style="width: 100%" aria-valuenow="100" aria-valuemin="0"
-                                aria-valuemax="100"></div>
-                          </div>
-                      </div>
-                    </div>
+                    <div class="h5 mb-0 font-weight-bold text-gray-800"><%= League.count %></div>
                 </div>
                 <div class="col-auto">
-                    <i class="fas fa-chart-pie fa-2x text-gray-300"></i>
+                    <i class="fas fa-trophy fa-2x text-gray-300"></i>
                 </div>
               </div>
           </div>
         </div>
     </div>
+
+    <!-- Clubs Card -->
+    <div class="col-xl-3 col-md-6 mb-4">
+        <div class="card border-left-info shadow h-100 py-2">
+          <div class="card-body">
+              <div class="row no-gutters align-items-center">
+                <div class="col mr-2">
+                    <div class="text-xs font-weight-bold text-info text-uppercase mb-1">
+                      Clubs
+                    </div>
+                    <div class="h5 mb-0 font-weight-bold text-gray-800"><%= Club.count %></div>
+                </div>
+                <div class="col-auto">
+                    <i class="fas fa-users fa-2x text-gray-300"></i>
+                </div>
+              </div>
+          </div>
+        </div>
+    </div>
+
+    <!-- Players Card -->
+    <div class="col-xl-3 col-md-6 mb-4">
+        <div class="card border-left-warning shadow h-100 py-2">
+          <div class="card-body">
+              <div class="row no-gutters align-items-center">
+                <div class="col mr-2">
+                    <div class="text-xs font-weight-bold text-warning text-uppercase mb-1">
+                      Players
+                    </div>
+                    <div class="h5 mb-0 font-weight-bold text-gray-800"><%= Player.count %></div>
+                </div>
+                <div class="col-auto">
+                    <i class="fas fa-male fa-2x text-gray-300"></i>
+                </div>
+              </div>
+          </div>
+        </div>
+    </div>
+
+    <!-- Matches Card -->
+    <div class="col-xl-3 col-md-6 mb-4">
+        <div class="card border-left-primary shadow h-100 py-2">
+          <div class="card-body">
+              <div class="row no-gutters align-items-center">
+                <div class="col mr-2">
+                    <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
+                      Matches
+                    </div>
+                    <div class="h5 mb-0 font-weight-bold text-gray-800"><%= Match.count %></div>
+                </div>
+                <div class="col-auto">
+                    <i class="fas fa-people-arrows fa-2x text-gray-300"></i>
+                </div>
+              </div>
+          </div>
+        </div>
+    </div>
+
   </div>
 </div>
