--- a/app/views/admin/players/_player_in_club.html.erb
+++ b/app/views/admin/players/_player_in_club.html.erb
@@ -1,3 +1,4 @@
-<li class="list-group-item">
-  <%= player.name %>
+ <li class="list-group-item d-flex justify-content-between align-items-center">
+    <%= player.name %>
+    <span class="badge badge-primary badge-pill"><%= player.position.name %></span>
 </li>
