--- a/app/views/admin/shared/_sidebar.html.erb
+++ b/app/views/admin/shared/_sidebar.html.erb
@@ -4,7 +4,7 @@
     <div class="sidebar-brand-icon rotate-n-15">
       <i class="far fa-circle"></i>
     </div>
-    <div class="sidebar-brand-text mx-3">FFN</div>
+    <div class="sidebar-brand-text mx-3">F4N</div>
   </a>
   <!-- Divider -->
   <hr class="sidebar-divider my-0">
@@ -49,14 +49,14 @@
   </li>
     <li class="nav-item">
     <a class="nav-link" href="<%= admin_players_path %>">
-    <i class="fas fa-fw fa-user"></i>
+    <i class="fas fa-fw fa-male"></i>
     <span>Players</span>
     </a>
   </li>
   </li>
     <li class="nav-item">
     <a class="nav-link" href="<%= admin_matches_path %>">
-    <i class="fas fa-fw fa-user"></i>
+    <i class="fas fa-fw fa-people-arrows"></i>
     <span>Matches</span>
     </a>
   </li>
@@ -142,11 +142,5 @@
   <!-- Sidebar Toggler (Sidebar) -->
   <div class="text-center d-none d-md-inline">
     <button class="rounded-circle border-0" id="sidebarToggle"></button>
-  </div>
-  <!-- Sidebar Message -->
-  <div class="sidebar-card">
-    <img class="sidebar-card-illustration mb-2" src="https://source.unsplash.com/Mv9hjnEUHR4/60x60" alt="">
-    <p class="text-center mb-2"><strong>SB Admin Pro</strong> is packed with premium features, components, and more!</p>
-    <a class="btn btn-success btn-sm" href="https://startbootstrap.com/theme/sb-admin-pro">Upgrade to Pro!</a>
   </div>
 </ul>
