--- a/app/views/admin/users/_user.html.erb
+++ b/app/views/admin/users/_user.html.erb
@@ -1,5 +1,5 @@
 <tr>
-  <td class="pl-4"><%= index %></td>
+  <td class="pl-4"><%= get_no_in_table(index) %></td>
   <td>
     <span class="font-medium text-muted mb-0"><%= user.username %></span>
   </td>
