--- a/app/javascript/stylesheets/admin/sb-admin-2.css
+++ b/app/javascript/stylesheets/admin/sb-admin-2.css
@@ -5206,6 +5206,10 @@ a.badge-dark:focus, a.badge-dark.focus {
   padding-left: 0;
   margin-bottom: 0;
   border-radius: 0.35rem;
+  max-height: 450px;
+  margin-bottom: 10px;
+  overflow: scroll;
+  -webkit-overflow-scrolling: touch;
 }
 
 .list-group-item-action {
