--- a/app/views/admin/clubs/show.html.erb
+++ b/app/views/admin/clubs/show.html.erb
@@ -1,42 +1,63 @@
 <section id="feature_category_section" class="feature_category_section single-page section_wrapper">
   <div class="container">
-    <div class="row">
+    <div class="row mb-3">
       <div class="col-md-12">
-        <div class="single_content_layout">
-          <div class="item feature_news_item">
-            <div class="item_img">
-            </div>
-            <div class="item_wrapper">
-              <div class="d-flex justify-content-between mb-3">
-                <div class="news_item_title">
-                  <%= link_to @club.name, admin_club_path(@club), class: "h2" %>
-                </div>
-                <div class="mx-auto mb-3" style="width: 140px;">
-                  <div class="d-flex justify-content-center align-items-center rounded" style="height: 140px; background-color: rgb(233, 236, 239);">
-                    <%= image_tag @club.logo, class: "img-profile", style: "height: inherit; width: inherit" if @club.logo.attached? %>
-                  </div>
-                </div>
-                <div class="dropdown">
-                  <button class="btn btn-primary btn-sm dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Action
-                  </button>
-                  <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
-                    <%= link_to "Edit", edit_admin_club_path(@club), class: "dropdown-item" %>
-                    <%= link_to "Delete", admin_club_path(@club), class: "dropdown-item", method: :delete %>
-                  </div>
-                </div>
-
-              </div>
-
-              <p><b>Name:</b> <%= @club.name %></p>
-              <p><b>Manager:</b> <%= @club.manager %></p>
-              <p><b>Stadium:</b> <%= @club.stadium %></p>
-              <p><b>History:</b> <%= @club.history %></p>
-              <p><b>Founded at:</b> <%= @club.founded_at %></p>
-              <div><b>Players:</b> </ul class="list-group"><%= render partial: "admin/players/player_in_club", collection: @club.players, as: :player %></ul></div>
+        <div class="d-flex justify-content-between mb-3">
+          <nav aria-label="breadcrumb">
+            <ol class="breadcrumb">
+              <li class="breadcrumb-item"><%= link_to "Clubs", admin_clubs_path %></li>
+              <li class="breadcrumb-item active" aria-current="page"><%= link_to @club.name, admin_club_path(@club) %></li>
+            </ol>
+          </nav>
+          <div class="dropdown">
+            <button class="btn btn-primary btn-sm dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Action
+            </button>
+            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
+              <%= link_to "Edit", edit_admin_club_path(@club), class: "dropdown-item" %>
+              <%= link_to "Delete", admin_club_path(@club), class: "dropdown-item", method: :delete %>
             </div>
           </div>
         </div>
+      </div>
+    </div>
+    <div class = "row">
+      <div class= "col-6">
+        <div class = "h3">
+          <%= @club.name %><hr/>
+        </div>
+      </div>
+    </div>
+    <div class = "row">
+      <div class= "col-6">
+        <div class="mx-auto mb-3 shadow" style="width: 250px;">
+          <div class="rounded" style="height: 250px; background-color: rgb(233, 236, 239);">
+            <%= image_tag @club.logo, class: "img-profile", style: "height: inherit; width: inherit" if @club.logo.attached? %>
+          </div>
+        </div>
+        <div class= "bg-secondary text-white rounded p-3">
+          <div class="d-flex justify-content-between mb-2">
+            <b>Name:</b> <%= @club.name %>
+          </div>
+          <div class="d-flex justify-content-between mb-2">
+            <b>Manager URL:</b> <%= @club.manager %>          
+          </div>
+          <div class="d-flex justify-content-between mb-2">
+            <b>Stadium:</b> <%= @club.stadium %>
+          </div>
+          <div class="d-flex justify-content-between mb-2">
+            <b>History:</b> <%= @club.history %>          
+          </div>  
+          <div class="d-flex justify-content-between">
+            <b>Founded at:</b> <%= @club.founded_at %>          
+          </div>  
+        </div>
+      </div>
+      <div class = "col-6">
+        <ul class="list-group">
+          <div class = "list-group-item list-group-item-secondary font-weight-bold text-uppercase">Players</div>
+          <%= render partial: "admin/players/player_in_club", collection: @club.players, as: :player %>
+        </ul>
       </div>
     </div>
   </div>
