--- a/app/views/admin/players/_player.html.erb
+++ b/app/views/admin/players/_player.html.erb
@@ -1,6 +1,7 @@
 <tr>
-  <td class="pl-4"><%= index %></td>
+  <td class="pl-4"><%= get_no_in_table(index) %></td>
   <td>
+    <%= image_tag player.picture, class: "img-profile rounded-circle", style: "height: 20px; width: 20px" if player.picture.attached? %>
     <span class="font-medium text-muted mb-0"><%= player.name %></span>
   </td>
   <td>
