--- a/app/views/admin/players/show.html.erb
+++ b/app/views/admin/players/show.html.erb
@@ -1,46 +1,65 @@
 <section id="feature_category_section" class="feature_category_section single-page section_wrapper">
   <div class="container">
-    <div class="row">
+    <div class="row mb-3">
       <div class="col-md-12">
-        <div class="single_content_layout">
-          <div class="item feature_news_item">
-            <div class="item_img">
-            </div>
-            <div class="item_wrapper">
-              <div class="d-flex justify-content-between mb-3">
-                <div class="news_item_title">
-                  <%= link_to @player.name, admin_player_path(@player), class: "h2" %>
-                </div>
-                <div class="mx-auto mb-3" style="width: 140px;">
-                  <div class="d-flex justify-content-center align-items-center rounded" style="height: 140px; background-color: rgb(233, 236, 239);">
-                    <%= image_tag @player.picture, class: "img-profile", style: "height: inherit; width: inherit" if @player.picture.attached? %>
-                  </div>
-                </div>
-                <div class="dropdown">
-                  <button class="btn btn-primary btn-sm dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Action
-                  </button>
-                  <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
-                    <%= link_to "Edit", edit_admin_player_path(@player), class: "dropdown-item" %>
-                    <%= button_tag "Transfer", type: 'button', class: 'dropdown-item js-player-transfer', :data => {toggle: "modal", target: "#player-transfer-modal", href: '#'} %>
-                    <%= link_to "Delete", admin_player_path(@player), class: "dropdown-item", method: :delete %>
-                  </div>
-                </div>
-
-              </div>
-
-              <p><b>Name:</b> <%= @player.name %></p>
-              <p><b>Date of Birth:</b> <%= @player.dob %></p>
-              <p><b>Club:</b> <%= @player.club.name %></p>
-              <p><b>Nationality:</b> <%= @player.nationality.name %></p>
-              <p><b>Postion:</b> <%= @player.position.name %></p>
-              <div><b>Transfer History:</b> </ul class="list-group"><%= render partial: "admin/players/transfer_history", collection: @player.transfer_histories %></ul></div>
+        <div class="d-flex justify-content-between mb-3">
+          <nav aria-label="breadcrumb">
+            <ol class="breadcrumb">
+              <li class="breadcrumb-item"><%= link_to "Players", admin_players_path %></li>
+              <li class="breadcrumb-item active" aria-current="page"><%= link_to @player.name, admin_player_path(@player) %></li>
+            </ol>
+          </nav>
+          <div class="dropdown">
+            <button class="btn btn-primary btn-sm dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Action
+            </button>
+            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
+              <%= link_to "Edit", edit_admin_player_path(@player), class: "dropdown-item" %>
+              <%= link_to "Delete", admin_player_path(@player), class: "dropdown-item", method: :delete %>
             </div>
           </div>
         </div>
       </div>
     </div>
+    <div class = "row">
+      <div class= "col-6">
+        <div class = "h3">
+          <%= @player.name %><hr/>
+        </div>
+      </div>
+    </div>
+    <div class = "row">
+      <div class= "col-6">
+        <div class="mx-auto mb-3 shadow" style="width: 250px;">
+          <div class="rounded" style="height: 250px; background-color: rgb(233, 236, 239);">
+            <%= image_tag @player.picture, class: "img-profile", style: "height: inherit; width: inherit" if @player.picture.attached? %>
+          </div>
+        </div>
+        <div class= "bg-secondary text-white rounded p-3">
+          <div class="d-flex justify-content-between mb-2">
+            <b>Name:</b> <%= @player.name %>
+          </div>
+          <div class="d-flex justify-content-between mb-2">
+            <b>Club:</b> <%= @player.club.name %>          
+          </div>
+          <div class="d-flex justify-content-between mb-2">
+            <b>Position:</b> <%= @player.position.name %>
+          </div>
+          <div class="d-flex justify-content-between mb-2">
+            <b>Date of Birth:</b> <%= @player.dob %>          
+          </div>  
+          <div class="d-flex justify-content-between">
+            <b>Nationality:</b> <%= @player.nationality.name %>          
+          </div>  
+        </div>
+      </div>
+      <div class = "col-6">
+        <ul class="list-group">
+          <div class = "list-group-item list-group-item-secondary font-weight-bold text-uppercase">Transfer history</div>
+          <%= render partial: "admin/transfer_histories/transfer_history", collection: @player.transfer_histories %>        
+        </ul>
+        <div><%= link_to 'Transfer', new_admin_player_transfer_history_path(player_id: @player.id), class: "list-group-item list-group-item-action bg-success text-white text-center mt-2", remote: true %>    
+      </div>
+    </div>
   </div>
 </section>
-
-<%= render 'admin/players/player_transfer_modal' %>
